--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       "@context": "https://schema.org",
       "@type": "AccountingService",
       "name": "테스트",
-      "description": "전문적인 세무 서비스를 제공하는 회사입니다.",
+      "description": "보다 전문적인 명품감정 강의를 제공하는 회사입니다.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "서울특별시 강남구 테헤란로",
@@ -32,7 +32,7 @@
         "postalCode": "06151",
         "addressCountry": "KR"
       },
-      "url": "https://globeetax.com",
+      "url": "https://국제명품감정교육원.com",
       "openingHours": "Mo-Fr 09:00-18:00",
       "priceRange": "$$"
     }
