feat: Setting for naver SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="naver-site-verification" content="41a9258b6d01c24ce06b11ea4c8071896646ffa7" />
   <link rel="icon" href="/logo.ico">
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=tyk92hxoh8"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
