--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 기본 SEO 메타 태그 -->
-  <title>국제명품감정교육원 - 전문 명품감정 교육기관</title>
+  <title>국제명품감정교육원</title>
   <meta name="description" content="보다 전문적인 명품감정 강의를 제공하는 국제명품감정교육원입니다. 체계적인 교육과정으로 명품감정 전문가를 양성합니다.">
   <meta name="keywords" content="명품감정, 명품감정교육, 명품감정사, 명품감정강의, 명품감정교육원, 명품감정사자격증">
   <meta name="author" content="국제명품감정교육원">
@@ -18,7 +18,7 @@
 
   <!-- Open Graph 메타 태그 -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="국제명품감정교육원 - 전문 명품감정 교육기관">
+  <meta property="og:title" content="국제명품감정교육원">
   <meta property="og:description" content="보다 전문적인 명품감정 강의를 제공하는 국제명품감정교육원입니다. 체계적인 교육과정으로 명품감정 전문가를 양성합니다.">
   <meta property="og:url" content="https://국제명품감정교육원.com">
   <meta property="og:site_name" content="국제명품감정교육원">
@@ -26,18 +26,15 @@
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="국제명품감정교육원 - 전문 명품감정 교육기관">
   <meta name="twitter:description" content="보다 전문적인 명품감정 강의를 제공하는 국제명품감정교육원입니다.">
 
   <!-- 카노니컬 URL -->
   <link rel="canonical" href="https://국제명품감정교육원.com">
 
-  <!-- 네이버 서치어드바이저 준비 -->
-  <!-- <meta name="naver-site-verification" content="네이버 서치어드바이저에서 제공받은 인증코드"> -->
 
   <!-- 네이버 SEO 최적화 -->
   <meta name="subject" content="명품감정교육">
-  <meta name="title" content="국제명품감정교육원 - 전문 명품감정 교육기관">
+  <meta name="title" content="국제명품감정교육원">
   <meta name="classification" content="교육">
   <meta name="distribution" content="global">
   <meta name="rating" content="general">
